--- a/src/app/modules/reports/request-count-bar-chart/request-count-bar-chart.component.scss
+++ b/src/app/modules/reports/request-count-bar-chart/request-count-bar-chart.component.scss
@@ -1,14 +1,12 @@
 @import '../../../../assets/scss/colors';
 @import '../../../../assets/scss/mixins';
-@import '../../../../assets/scss/_loaders';
-@import '../../../../assets/scss/_side-info.scss';
+@import '../../../../assets/scss/loaders';
+@import '../../../../assets/scss/side-info';
 @import '../../../../assets/scss/fonts';
 
 .chart-area {
-  width: 3000px;
-  height: 400px;
+  width: 100%;
   position: relative;
-  overflow-x: scroll;
   border-radius: 6px;
   background-color: #ffffff;
   box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.03);
@@ -16,10 +14,8 @@
   margin-bottom: 20px;
 
   .chart {
-    border-radius: 6px;
-    margin-left: 30px;
+    border-radius: 2%;
     background: #fff;
-    width: 50%;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.03);
 
     .chart-header {
@@ -27,7 +23,6 @@
       font-size: 18px;
       padding: 25px 0;
       padding-left: 30px;
-      width: calc(100% - 500px);
     }
 
     #bar-chart {
